Welcome Section & Dream Section Updated

--- a/index.html
+++ b/index.html
@@ -12,7 +12,41 @@
  <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <h1>Welcome To</h1>   
- <h1>Khadiza</h1>   
+    <!-- welcome-section start -->
+    <div class="Welcome-Section">
+        <div class="Container flexiable-container">
+            <div class="left-side half-width">
+                <h1>Welcome To</h1>
+                <h1><span>Khadiza</span> World</h1>
+                <h3>Front-End Developer</h3>
+                <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+           <a href="https://github.com/Khadiza-Dev">Hire Me</a>
+            </div>
+            <div class="right-side half-width">
+                <img src="images/my-bg-khadiza.png" alt="">
+            </div>
+        </div>
+    </div>
+    <!-- welcome-section end-->
+    <!-- Dream-section start-->
+    <div class="Dream-big">
+        <div class="Container flexiable-container">
+            <div class="right-side half-width">
+                <img src="images/my-bg-khadiza-2.png" alt="">
+            </div>
+            <div class="left-side half-width">
+                <h1>Welcome To</h1>
+                <h1><span>Khadiza</span> World</h1>
+                <h3>Front-End Developer</h3>
+                <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+           <a href="https://github.com/Khadiza-Dev">Hire Me</a>
+            </div>
+        </div>
+
+    </div>
+    <!-- Dream-section end-->
+    <!-- Experiance-section start-->
+    <div class="Experiance"></div>
+    <!-- Experiance-section end-->
 </body>
 </html>
