Experiance-container-changed

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- Experiance-section start-->
    <h1> Experiances</h1>
     <div class="Experiance section-padding">
-        <div class="container flexiable-container">
+        <div class="Container flexiable-container">
         <div id="item-1" class="ex-item half-width">
          <h2>Full Stack Web Developer</h2>
          <h3><span class="orange">2021-Present | Pro Level Developer</span></h3>
